adding unit and api tests and fixing routes
